--- a/Neural_Nets.ipynb
+++ b/Neural_Nets.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "## Introduction\n",
     "\n",
-    "The intention of this project was to build a functioning neaural network using [TensorFlow](https://www.tensorflow.org/), experiment with hidden layers and nodes and see the effect of other hyperparameters in the model.\n",
+    "The intention of this project was to build a functioning neural network using [TensorFlow](https://www.tensorflow.org/), experiment with hidden layers and nodes and see the effect of other hyperparameters in the model.\n",
     "\n",
     "This was based on examples used in the excellent [Machine Learning Crash Course](https://developers.google.com/machine-learning/crash-course/ml-intro) offered by Google.\n",
     "\n",
@@ -49,7 +49,7 @@
     "Sourced from [Google](https://download.mlcc.google.com/mledu-datasets/california_housing_train.csv).\n",
     "\n",
     "#### Features and Labels\n",
-    "The [Label](https://pythonprogramming.net/features-labels-machine-learning-tutorial/) (the 'target' of our model, the attribute of the data that we want to output as a prediction when it is built) is median_house_value. The [features](https://pythonprogramming.net/features-labels-machine-learning-tutorial/) are the other attributes of the dataset. \n",
+    "The [Label](https://pythonprogramming.net/features-labels-machine-learning-tutorial/) (the 'target' of our model, the attribute of the data that we want to output as a prediction when it is built) is median_house_value. The [features](https://pythonprogramming.net/features-labels-machine-learning-tutorial/) are the other attributes of the dataset, along with those we engineer from the given dataset features.\n",
     "\n",
     "As with all ML applications there are ethical considerations to take into account when selecting our features, and it is vital to keep this in mind. In this project the model will not be used for anything in the real world, so will not impact anyone negatively or positively, so we don't need to be too concerned about this at this stage.\n",
     "\n",
@@ -1076,13 +1076,7 @@
       "17000/17000 [==============================] - 0s 9us/sample - loss: 0.3181 - mean_squared_error: 0.3181\n",
       "Epoch 68/140\n",
       "17000/17000 [==============================] - 0s 11us/sample - loss: 0.3173 - mean_squared_error: 0.3173\n",
-      "Epoch 69/140\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 69/140\n",
       "17000/17000 [==============================] - 0s 10us/sample - loss: 0.3193 - mean_squared_error: 0.3193\n",
       "Epoch 70/140\n",
       "17000/17000 [==============================] - 0s 10us/sample - loss: 0.3215 - mean_squared_error: 0.3215\n",
